feat: Implementa o endpoint responsável por consultar uma única venda ativa
