# routes/api.php
@@ -8,4 +8,5 @@ use App\Http\Controllers\SaleController;
 Route::get('/products', [ProductController::class, 'list']);
 
 Route::get('/sales', [SaleController::class, 'list']);
+Route::get('/sale/{id}', [SaleController::class, 'get']);
 Route::post('/sale', [SaleController::class, 'store']);
